objects/Customer_Credit_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <label>Credit Hold</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Available__c</fullName>
        <label>Credit Limit Available</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Ok_Backlog__c</fullName>
        <label>Credit Ok Backlog</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <label>Outstanding Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Customer Credit Detail</label>
    <nameField>
        <displayFormat>CCD-{00000000}</displayFormat>
        <label>Customer Credit Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Credit Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>